# pycounts_kegao

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pycounts_kegao/: __init__.py  plotting.py
tests/: test_pycounts_kegao.py
