[tool.poetry]
name = "pycounts_kegao"
version = "0.1.0"
description = "Calculate word counts in a text file!"
authors = ["Ke Gao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
